--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Open Price List</title>
-<link href="/css/main.css" rel="stylesheet"></head>
+<link href="../css/main.css" rel="stylesheet"></head>
 
 <body>
   <nav class="navbar navbar-default">
@@ -19,7 +19,17 @@
       </form>
     </div>
   </nav>
-  <div id="scanner-container"></div>
-<script type="text/javascript" src="/js/main.js"></script></body>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <textarea name="scanner-console" id="scanner-console" class="col-xs-12">
+        </textarea>
+      </div>
+      <div class="col-md-6">
+        <div id="scanner-container"></div>
+      </div>
+    </div>
+  </div>
+<script type="text/javascript" src="../js/main.js"></script></body>
 
 </html>
