--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,17 @@
       </form>
     </div>
   </nav>
-  <div id="scanner-container"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <textarea name="scanner-console" id="scanner-console" class="col-xs-12">
+        </textarea>
+      </div>
+      <div class="col-md-6">
+        <div id="scanner-container"></div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
