issue#1 fix fonts paths
fix webpack.config so paths to fonts are relative

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Open Price List</title>
-<link href="../css/main.css" rel="stylesheet"></head>
+<link href="./css/main.css" rel="stylesheet"></head>
 
 <body>
   <nav class="navbar navbar-default">
@@ -30,6 +30,6 @@
       </div>
     </div>
   </div>
-<script type="text/javascript" src="../js/main.js"></script></body>
+<script type="text/javascript" src="./js/main.js"></script></body>
 
 </html>
