--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <textarea name="scanner-console" id="scanner-console" class="col-xs-12">
-        </textarea>
+        <textarea name="scanner-console" id="scanner-console" class="col-xs-12"></textarea>
       </div>
       <div class="col-md-6">
         <div id="scanner-container"></div>
