issue#2 initial React commit

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <!-- <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Open Price List</a>
@@ -42,9 +42,9 @@
               <i class="glyphicon glyphicon-pencil"></i>
             </button>
           </div>
-          <!--<div class="panel-body">-->
-            
-          <!--</div>-->
+          <div class="panel-body">
+
+          </div>
           <table class="table">
             <tbody>
               <tr id="scanner-table-code">
@@ -70,7 +70,9 @@
         <div id="scanner-container"></div>
       </div>
     </div>
-  </div>
+  </div> -->
+
+  <div id="app"></div>
 </body>
 
 </html>
