issue#1 save to localStorage

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,11 @@
         <div class="panel panel-default">
           <div class="panel-heading">
             Product
-            <button class="btn btn-default btn-xs pull-right" data-toggle="button" aria-pressed="false">
+            <!-- <button class="btn btn-default btn-xs pull-right" data-toggle="button" aria-pressed="false">
               <i class="glyphicon glyphicon-pencil"></i>
+            </button> -->
+            <button id="scanner-table-save" class="btn btn-primary btn-xs pull-right" data-toggle="button">
+              <i class="glyphicon glyphicon-save"></i>
             </button>
           </div>
           <!--<div class="panel-body">-->
