--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,13 @@
 
 <head>
   <title>Open Price List</title>
+  <style type="text/css">
+    .drawingBuffer {
+      position: absolute;
+      top: 29px;
+      left: 8px;
+    }
+  </style>
 </head>
 
 <body>
