issue#2 include material-ui as main syle guide library

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,8 @@
 
 <head>
   <title>Open Price List</title>
-  <style type="text/css">
-    .drawingBuffer {
-      position: absolute;
-      top: 29px;
-      left: 8px;
-    }
-  </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
 <body>
